[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Chandalier.gd" type="Script" id=1]
[ext_resource path="res://resource/Fx/shadow.png" type="Texture" id=2]
[ext_resource path="res://resource/House_objects/Iron_Chandelier_furniture_icon_ID_653.png" type="Texture" id=3]
[ext_resource path="res://resource/sounds/Crash.wav" type="AudioStream" id=4]

[sub_resource type="GDScript" id=2]

script/source = "extends KinematicBody2D

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called when the node is added to the scene for the first time.
	# Initialization here
	pass

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
func trigger(entity):
	if(entity.has_method(\"kill\")):
		entity.kill()"

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 29.9774
height = 20.0

[node name="Node" type="Node2D" index="0"]

position = Vector2( 1, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Fall" type="Position2D" parent="." index="1"]

position = Vector2( 0.323975, 449.324 )
_sections_unfolded = [ "Transform" ]

[node name="Shadow" type="Sprite" parent="Fall" index="0"]

position = Vector2( -1.5456, 97.3198 )
scale = Vector2( 0.238106, 0.111767 )
texture = ExtResource( 2 )

[node name="Chand" type="Sprite" parent="." index="2"]

scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Kinematic2D_Chand" type="KinematicBody2D" parent="Chand" index="0"]

scale = Vector2( 10, 10 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = SubResource( 2 )
_sections_unfolded = [ "Collision" ]

[node name="Collision_Chand" type="CollisionShape2D" parent="Chand/Kinematic2D_Chand" index="0"]

position = Vector2( -1.2959, 14.2546 )
shape = SubResource( 1 )

[node name="Crash" type="AudioStreamPlayer2D" parent="Chand" index="1"]

scale = Vector2( 10, 10 )
stream = ExtResource( 4 )
volume_db = -0.42
pitch_scale = 4.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Crash2" type="AudioStreamPlayer2D" parent="Chand" index="2"]

scale = Vector2( 10, 10 )
stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 0.6
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Crash3" type="AudioStreamPlayer2D" parent="Chand" index="3"]

scale = Vector2( 10, 10 )
stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 32.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Crash4" type="AudioStreamPlayer2D" parent="Chand" index="4"]

scale = Vector2( 10, 10 )
stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 0.4
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


